--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="shortcut icon" href="icone/favicon.svg" type="image/svg">
 </head>
 <body>
     <header>
