--- a/index.html
+++ b/index.html
@@ -46,6 +46,93 @@
             
             <article class="skills">
                 <h2><i class="fa-solid fa-brain"></i> Minhas Skills</h2>
+                <div class="skill-container">
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i> HTML5
+                            </span>
+                            <span class="porcent">
+                                90%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 90%;">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i> CSS3
+                            </span>
+                            <span class="porcent">
+                                70%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 70%;">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i> JavaScript
+                            </span>
+                            <span class="porcent">
+                                10%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 10%;">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-person-rays"></i> Comunicação
+                            </span>
+                            <span class="porcent">
+                                100%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 100%;">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-person-rays"></i> Trabalho em equipe
+                            </span>
+                            <span class="porcent">
+                                100%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 100%;">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-person-rays"></i> Adaptabilidade
+                            </span>
+                            <span class="porcent">
+                                85%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 85%;">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
 
             </article><!-- Fim article.skills-->
             
